2004-08-31 20:40 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridSmoothNodeVolume) added
	gridSmoothNodeVolumeWithSurf. To allow volume improvement of
	invalid surface meshes to make them vaild.

2004-08-31 19:50 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridSmoothNodeVolumeWithSurf) added. Note that
	using this single gradient and line sreach method failed in a
	number of cases. It needs to be replaced with congigent gradient.

2004-08-31 14:35 Mike Park  <mike.park@nasa.gov>

	* src/gridmath.h added (gridVectorScale).
	* src/gridmetric.h added (gridCellVolumeDerivative).

2004-08-30 21:04 Mike Park  <mike.park@nasa.gov>

	* src/refine_main.c added, was src/main.c.
	* src/main.c removed, renamed to src/refine_main.c.
	* src/Makefile.am renamed refine stand-alone main.c -> refine_main.c

2004-08-30 20:55 Mike Park  <mike.park@nasa.gov>

	* src/Makefile.am removed unused near object from librefine.a.

2004-08-30 09:21 Bill Jones <w.t.jones@larc.nasa.gov>

	* src/gridfortran.c, src/gridfortran.h (gridparallelloadcapri_) API
	change to add return code.
	* src/gridgeom.c (gridParallelGeomLoad) return NULL on failures.

2004-08-29 22:10 Mike Park  <mike.park@nasa.gov>

	* doc/refine.texi added texinfo file.

2004-08-29 12:20 Mike Park  <mike.park@nasa.gov>

	* doc/anisotropicMetric.tex renamed from doc/anIsoMesh.tex.
	* configure.ac added doc/Makefile to build.
	* Makefile.am add doc and doc/anisotropicMetric.tex to build.

2004-08-27 17:00 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridwritetecplotsurfacezone_) now only dumps
	out negative cells (cells with four nodes on boundary are not
	written).

2004-08-17 12:55 Mike Park  <mike.park@nasa.gov>

	* Made 1.2.2 Release. Interface to FUN3D 3.3.1. Fix FAKEGeom.
	
2004-08-17 12:50 Mike Park  <mike.park@nasa.gov>

	* src/FAKEGeom.h added CADGeom_LoadPart, CADGeom_UseDefaultIOCallbacks.

2004-08-17 08:45 Mike Park  <mike.park@nasa.gov>

	* Made 1.2.1 Release. Interface to FUN3D 3.3.1.
	