@@ -36,7 +36,7 @@ void gridexportfast_( void );
 void gridparallelswap_( int *processor, double *ARlimit );
 void gridparallelsmooth_( int *processor,
 			  double *optimizationLimit, double *laplacianLimit );
-void gridparallelrelaxneg_( int *processor );
+void gridparallelrelaxneg_( int *processor, int *geometryAllowed );
 void gridparalleladapt_( int *processor, 
 			 double *minLength, double *maxLength );
 void queuedumpsize_( int *nInt, int *nDouble );
