@@ -1,3 +1,12 @@
+2004-08-31 22:31 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridfortran.c (gridparallelrelaxneg_) API change to add an
+	argument to control if surface nodes are moved.
+	* src/gridmpi.c (gridParallelRelaxNegativeCells) added 
+	smoothOnSurface argument.
+	* src/gridcad.c (gridSmoothVolumeNearNode) added smoothOnSurface
+	argument.
+
 2004-08-31 20:40 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridcad.c (gridSmoothNodeVolume) added
